--- a/Pages/Tenant/ViewInvoices.cshtml
+++ b/Pages/Tenant/ViewInvoices.cshtml
@@ -18,7 +18,7 @@
             <div class="card border-0 shadow-sm">
                 <div class="card-body">
                     <div class="table-responsive">
-                        <table class="table table-hover">
+                        <table class="table table-hover data-table" id="invoicesTable">
                             <thead>
                                 <tr>
                                     <th>Invoice</th>
